force-app/main/default/objects/Case/fields/Account_Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Unit_Category__c</fullName>
    <label>Account Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>