force-app/main/default/objects/Case/fields/Assign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Assign_Date_Time__c</fullName>
    <label>Assign Date Time</label>
    <type>DateTime</type>
</CustomField>