force-app/main/default/objects/Case/fields/Assignee_Comment__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Comment__c</fullName>
    <label>Assignee Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>