force-app/main/default/objects/Case/fields/Auto_Assign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign Lead</label>
    <type>Checkbox</type>
</CustomField>