force-app/main/default/objects/Case/fields/Case_Exceed_SLA_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Exceed_SLA_Closed__c</fullName>
    <formula>IF(Resolve_Date_Time__c &gt;  Due_Date__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Exceed SLA (Closed)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>