force-app/main/default/objects/Case/fields/Case_Exeed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_Exeed_SLA__c</fullName>
    <formula>IF(Due_Date__c &lt; NOW(), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Exceed SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>