force-app/main/default/objects/Case/fields/Case_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Rejection_Reason__c</fullName>
    <label>Case Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>