force-app/main/default/objects/Case/fields/Case_Resolved_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolved_within_SLA__c</fullName>
    <description>Number of Case resolved within SLA for Service Report</description>
    <formula>IF(Resolve_Date_Time__c &lt;  Due_Date__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Resolved within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>