force-app/main/default/objects/Case/fields/Company_Eng_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Eng_Name__c</fullName>
    <formula>IF( $User.CompanyName = &#39;Ananda&#39;, &#39;Ananda&#39;, &#39;Helix&#39;)</formula>
    <label>Company Eng Name</label>
    <type>Text</type>
</CustomField>