force-app/main/default/objects/Case/fields/Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Number__c</fullName>
    <description>If User&#39;s company = Ananda, display Ananda&#39;s number. Else, display Helix&#39;s number.</description>
    <formula>IF( $User.CompanyName = &#39;Ananda&#39;, &#39;02-316-2222&#39;, &#39;02-032-2222&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Phone Number</label>
    <type>Text</type>
</CustomField>