force-app/main/default/objects/Case/fields/Company_Thai_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Thai_Name__c</fullName>
    <formula>IF( $User.CompanyName = &#39;Ananda&#39;, &#39;บริษัท อนันดา ดีเวลลอปเม้นท์ จํากัด (มหาชน)&#39;, &#39;บริษัท เฮลิกซ์ จำกัด&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Thai Name</label>
    <type>Text</type>
</CustomField>