force-app/main/default/objects/Case/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone/Email</label>
    <referenceTo>Contact_Info__c</referenceTo>
    <relationshipLabel>Cases (Contact Info)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>