force-app/main/default/objects/Case/fields/Count_Assign_Transfer_Case__c.field-meta.xml
<CustomField>
    <fullName>Count_Assign_Transfer_Case__c</fullName>
    <formula>IF(ISBLANK(Assignee__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Assign/Transfer Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>