force-app/main/default/objects/Case/fields/Count_of_IVR_Answered__c.field-meta.xml
<CustomField>
    <fullName>Count_of_IVR_Answered__c</fullName>
    <formula>IF(ISNULL(IVRScore__c), 0, 1)</formula>
    <label>Count of IVR Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>