force-app/main/default/objects/Case/fields/Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Lead</label>
    <type>Checkbox</type>
</CustomField>