force-app/main/default/objects/Case/fields/DisconnectedBy__c.field-meta.xml
<CustomField>
    <fullName>DisconnectedBy__c</fullName>
    <label>Disconnected By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>