force-app/main/default/objects/Case/fields/Due_Date_Plus_2_days__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Plus_2_days__c</fullName>
    <description>For 2nd SLA exceeded report filter</description>
    <formula>Due_Date__c +2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date (Plus 2 days)</label>
    <type>DateTime</type>
</CustomField>