force-app/main/default/objects/Case/fields/Duration_Assign_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Duration_Assign_Resolve__c</fullName>
    <description>Use for service report &quot;Average Duration of Complaint Case by Topic&quot;</description>
    <formula>Resolve_Date_Time__c -  Assign_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Assign-Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>