force-app/main/default/objects/Case/fields/Duration_Open_Close__c.field-meta.xml
<CustomField>
    <fullName>Duration_Open_Close__c</fullName>
    <description>Use for service report &quot;Average Duration of Complaint Case by Topic&quot;</description>
    <formula>Close_Date_Time__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Open-Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>