force-app/main/default/objects/Case/fields/Duration_Resolve_Closed__c.field-meta.xml
<CustomField>
    <fullName>Duration_Resolve_Closed__c</fullName>
    <description>Use for service report &quot;Average Duration of Complaint Case by Topic&quot;</description>
    <formula>Close_Date_Time__c - Resolve_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Resolve-Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>