force-app/main/default/objects/Case/fields/EndCallDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndCallDateTime__c</fullName>
    <label>End Call Date Time</label>
    <type>DateTime</type>
</CustomField>