force-app/main/default/objects/Case/fields/Escalated_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Email__c</fullName>
    <label>Escalated to (Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>