force-app/main/default/objects/Case/fields/Escalated_to_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person with Salesforce access that case is escalated to</description>
    <label>Escalated to (Salesforce User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>