force-app/main/default/objects/Case/fields/Escalation_Lv3_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Lv3_Due_Date__c</fullName>
    <label>Escalation Lv3 Due Date</label>
    <type>DateTime</type>
</CustomField>