force-app/main/default/objects/Case/fields/Escalation_Round__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Round__c</fullName>
    <description>Specify whether the round that case is escalated to others</description>
    <label>Escalation Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>0-hadnotified</fullName>
                <isActive>false</isActive>
                <label>0-hadnotified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>