force-app/main/default/objects/Case/fields/EscalationLv1DueDate__c.field-meta.xml
<CustomField>
    <fullName>EscalationLv1DueDate__c</fullName>
    <label>Escalation Lv1 Due Date</label>
    <type>DateTime</type>
</CustomField>