force-app/main/default/objects/Case/fields/Had_remind_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Had_remind_follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had remind follow up</label>
    <type>Checkbox</type>
</CustomField>