force-app/main/default/objects/Case/fields/If_Other_Please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Please_specify__c</fullName>
    <label>If Other, Please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>