force-app/main/default/objects/Case/fields/Is_Customer_Replied_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Replied_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Replied Email</label>
    <type>Checkbox</type>
</CustomField>