force-app/main/default/objects/Case/fields/Is_My_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Service_User__c</fullName>
    <formula>IF(Services_Owner__c ==  $User.Id , true,false)</formula>
    <label>Is My Service User</label>
    <type>Checkbox</type>
</CustomField>