force-app/main/default/objects/Case/fields/Is_Notify_Service_Owner_Replied_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Notify_Service_Owner_Replied_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Notify Service Owner (Replied Email)</description>
    <label>Is Notify Service Owner (Replied Email)</label>
    <type>Checkbox</type>
</CustomField>