force-app/main/default/objects/Case/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF( Manual_Assign_Lead__c = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>