force-app/main/default/objects/Case/fields/IVRScore__c.field-meta.xml
<CustomField>
    <fullName>IVRScore__c</fullName>
    <label>IVR Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>