force-app/main/default/objects/Case/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead ID</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Cases (Lead)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>