force-app/main/default/objects/Case/fields/Manual_Assign__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Assign Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project_Name__c</field>
            <operation>equals</operation>
            <valueField>Project_Users__c.Project_Code__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Users__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>