force-app/main/default/objects/Case/fields/Manual_Assign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assign_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Assign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>