force-app/main/default/objects/Case/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <label>Migration</label>
    <length>3</length>
    <type>Text</type>
</CustomField>