force-app/main/default/objects/Case/fields/ProblemAnalysis__c.field-meta.xml
<CustomField>
    <fullName>ProblemAnalysis__c</fullName>
    <label>Problem Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>