force-app/main/default/objects/Case/fields/Report_Check_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Report_Check_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Email Sent</label>
    <type>Checkbox</type>
</CustomField>