force-app/main/default/objects/Case/fields/Report_Company__c.field-meta.xml
<CustomField>
    <fullName>Report_Company__c</fullName>
    <formula>IF (  Owner:User.Id != null ,Owner:User.CompanyName, IF( Owner:Queue.Id != null &amp;&amp;  CONTAINS(Owner:Queue.QueueName, &quot;Helix&quot;),&quot;Helix&quot;,&quot;Ananda&quot;  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>