force-app/main/default/objects/Case/fields/Report_Number_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Report_Number_of_Case__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>