force-app/main/default/objects/Case/fields/Resolution_Category__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Category__c</fullName>
    <label>Resolution Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Contact customer to clarify and explain</fullName>
                <isActive>false</isActive>
                <label>Contact customer to clarify and explain</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>