force-app/main/default/objects/Case/fields/Resolution_Comment__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comment__c</fullName>
    <label>Resolution Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>