force-app/main/default/objects/Case/fields/ResultSummary__c.field-meta.xml
<CustomField>
    <fullName>ResultSummary__c</fullName>
    <label>Result Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>