force-app/main/default/objects/Case/fields/Services_Owner__c.field-meta.xml
<CustomField>
    <fullName>Services_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Department</field>
            <operation>equals</operation>
            <value>Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Services_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>