force-app/main/default/objects/Case/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Severity_Level</valueSetName>
    </valueSet>
</CustomField>