force-app/main/default/objects/Case/fields/SLA_Master__c.field-meta.xml
<CustomField>
    <fullName>SLA_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA Master</label>
    <referenceTo>SLA_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>