force-app/main/default/objects/Case/fields/Target_ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>Target_ClosedDate__c</fullName>
    <label>Target Closed Date</label>
    <type>DateTime</type>
</CustomField>