force-app/main/default/objects/Case/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>Tel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>