force-app/main/default/objects/Case/fields/TempRejectCase__c.field-meta.xml
<CustomField>
    <fullName>TempRejectCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Reject Case</label>
    <type>Checkbox</type>
</CustomField>