force-app/main/default/objects/Case/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <formula>&quot;ref:_&quot; &amp; 
LEFT($Organization.Id,5) &amp; RIGHT($Organization.Id,4) &amp; 
&quot;._&quot; &amp; 
LEFT(Id,5) &amp; RIGHT(Id,6) &amp; 
&quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread ID</label>
    <type>Text</type>
</CustomField>