force-app/main/default/objects/Case/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtype__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Topic</valueSetName>
    </valueSet>
</CustomField>