force-app/main/default/objects/Case/fields/TrackId__c.field-meta.xml
<CustomField>
    <fullName>TrackId__c</fullName>
    <externalId>true</externalId>
    <label>TrackId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>