force-app/main/default/objects/Case/recordTypes/Ananda.recordType-meta.xml
<RecordType>
    <fullName>Ananda</fullName>
    <active>true</active>
    <businessProcess>Ananda</businessProcess>
    <label>Ananda</label>
</RecordType>