force-app/main/default/objects/Case/recordTypes/Ananda_Detail.recordType-meta.xml
<RecordType>
    <fullName>Ananda_Detail</fullName>
    <active>true</active>
    <businessProcess>Ananda</businessProcess>
    <label>Ananda Detail</label>
</RecordType>