force-app/main/default/objects/Case/recordTypes/Ananda_Helix.recordType-meta.xml
<RecordType>
    <fullName>Ananda_Helix</fullName>
    <active>true</active>
    <businessProcess>Ananda</businessProcess>
    <label>Ananda&amp;Helix</label>
</RecordType>