force-app/main/default/objects/Case/recordTypes/Ananda_Helix_Detail.recordType-meta.xml
<RecordType>
    <fullName>Ananda_Helix_Detail</fullName>
    <active>true</active>
    <businessProcess>Ananda</businessProcess>
    <label>Ananda&amp;Helix Detail</label>
</RecordType>