force-app/main/default/objects/Case/recordTypes/Helix.recordType-meta.xml
<RecordType>
    <fullName>Helix</fullName>
    <active>true</active>
    <businessProcess>Helix</businessProcess>
    <label>Helix</label>
</RecordType>