force-app/main/default/objects/Case/recordTypes/Helix_Detail.recordType-meta.xml
<RecordType>
    <fullName>Helix_Detail</fullName>
    <active>true</active>
    <businessProcess>Helix</businessProcess>
    <label>Helix Detail</label>
</RecordType>