force-app/main/default/objects/Case/validationRules/Mandatory_if_Topic_is_Promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_if_Topic_is_Promotion</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Topic__c , &quot;โปรโมชั่น (Promotion)&quot;)  &amp;&amp;  ISBLANK(Subject)</errorConditionFormula>
    <errorDisplayField>Subject</errorDisplayField>
    <errorMessage>Please specify Other Topic</errorMessage>
</ValidationRule>