force-app/main/default/objects/Case/validationRules/Mandatory_on_If_other_please_specify.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_on_If_other_please_specify</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISPICKVAL( Origin,&#39;Other&#39;) 
,ISBLANK(If_Other_Please_specify__c), 
FALSE
)</errorConditionFormula>
    <errorDisplayField>If_Other_Please_specify__c</errorDisplayField>
    <errorMessage>Please specify  contact channel.</errorMessage>
</ValidationRule>