force-app/main/default/objects/Case/validationRules/Mandatory_to_fill_Other_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_to_fill_Other_Channel</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(  Origin , &#39;Others&#39;) , ISBLANK( If_Other_Please_specify__c ),FALSE)</errorConditionFormula>
    <errorDisplayField>If_Other_Please_specify__c</errorDisplayField>
    <errorMessage>Please input other channel.</errorMessage>
</ValidationRule>