force-app/main/default/objects/Case/validationRules/Mandatory_to_fill_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_to_fill_Resolution</fullName>
    <active>false</active>
    <description>When changing status to &#39;Resolve&#39;</description>
    <errorConditionFormula>IF(ISPICKVAL(  Status ,&#39;Resolve&#39;) 
,OR(ISPICKVAL( Resolution_Category__c ,&#39;&#39;),ISBLANK( Resolution_Comment__c )), 
FALSE
)</errorConditionFormula>
    <errorMessage>Please input Resolution Category and Resolution Comment before updating Case Status to &#39;Resolve&#39;.</errorMessage>
</ValidationRule>