force-app/main/default/objects/Case/validationRules/Mandatory_to_fill_Severity_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_to_fill_Severity_Level</fullName>
    <active>true</active>
    <description>When Call Type is &#39;Complaint&#39;</description>
    <errorConditionFormula>AND(  ISPICKVAL( Type__c , &#39;Complaint&#39;)  ,Ispickval( Severity_Level__c ,&#39;&#39;))</errorConditionFormula>
    <errorDisplayField>Severity_Level__c</errorDisplayField>
    <errorMessage>Please input Severity Level.</errorMessage>
</ValidationRule>