force-app/main/default/objects/Case/validationRules/Require_Project_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Project_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Subtype__c,&#39;Transfer Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;CS/Transfer Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;PMC Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;PMT Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;Project Information&#39;),
ISPICKVAL(Subtype__c,&#39;Construction Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;FMC Inquiry&#39;),
ISPICKVAL(Subtype__c,&#39;Property/Project Management (Juristic)&#39;),
ISPICKVAL(Subtype__c,&#39;Sales&#39;),
ISPICKVAL(Subtype__c,&#39;Transfer Complaint CS&#39;),
ISPICKVAL(Subtype__c,&#39;Transfer Complaint PMT&#39;),
ISPICKVAL(Subtype__c, &#39;Transfer Complaint PMC&#39;),
ISPICKVAL(Subtype__c, &#39;PMT Complaint&#39;),
ISPICKVAL(Subtype__c, &#39;PMC Complaint&#39;),
ISPICKVAL(Subtype__c, &#39;Construction Complaint&#39;),
ISPICKVAL(Subtype__c, &#39;FMC Complaint&#39;)
),
ISBLANK(Project_Name__c ))</errorConditionFormula>
    <errorDisplayField>Project_Name__c</errorDisplayField>
    <errorMessage>Please enter project name</errorMessage>
</ValidationRule>