force-app/main/default/objects/Case/validationRules/Require_Resolve_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Resolve_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &#39;Complaint&#39;) &amp;&amp; 
(ISPICKVAL( Status , &#39;Resolve&#39;) || ISPICKVAL( Status , &#39;Closed&#39;))

&amp;&amp; 

( ISBLANK( ProblemAnalysis__c ) || ISBLANK( Solution__c ) || ISBLANK( ResultSummary__c ))</errorConditionFormula>
    <errorMessage>Please input Problem Analysis, Solution and Result Summary.</errorMessage>
</ValidationRule>