force-app/main/default/objects/Case/validationRules/Unable_to_change_status_back.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_change_status_back</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Status),

OR( 
ISPICKVAL(PRIORVALUE(Status), &#39;C&#39;) 
)
)</errorConditionFormula>
    <errorMessage>Unable to change status backward.</errorMessage>
</ValidationRule>