force-app/main/default/objects/Case/validationRules/Unable_to_fill_severity_level.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_fill_severity_level</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPickval( Call_Type__c, &#39;Inquiry&#39;),Ispickval( Severity_Level__c ,&#39;&#39;))</errorConditionFormula>
    <errorMessage>Unable to select severity level for inquiry case.</errorMessage>
</ValidationRule>