force-app/main/default/objects/Case/listViews/All_Active_Case.listView-meta.xml
<ListView>
    <fullName>All_Active_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Topic__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,Assign,Resolve</value>
    </filters>
    <label>All Active Case</label>
</ListView>