force-app/main/default/objects/Case/listViews/Case_Going_to_Overdue.listView-meta.xml
<ListView>
    <fullName>Case_Going_to_Overdue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Topic__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Assign</value>
    </filters>
    <label>Case Going to Overdue</label>
</ListView>